src/agent/cli/product/tui_app/src/snapshots/lha_cli__product__tui_app__pager_overlay__tests__static_overlay_wraps_long_lines.snap
---
source: src/agent/cli/src/../product/tui_app/src/pager_overlay.rs
expression: term.backend()
---
"/ S T A T I C / / / / / "
"a very long line that   "
"should wrap when        "
"rendered within a narrow"
"─────────────────── 0% ─"
" ↑/↓ to scroll   pgup/pg"
" q to quit              "
"                        "
