src/agent/cli/product/tui_app/src/snapshots/lha_cli__product__tui_app__pager_overlay__tests__transcript_overlay_apply_patch_scroll_vt100.snap
---
source: src/agent/cli/src/../product/tui_app/src/pager_overlay.rs
expression: snapshot
---
/ T R A N S C R I P T / / / / / / / / / / / / / / / / / / / / / / / / / / / / /
• Added foo.txt (+2 -0)
    1 +hello
    2 +world

• Added foo.txt (+2 -0)
    1 +hello
    2 +world
─────────────────────────────────────────────────────────────────────────── 0% ─
 ↑/↓ to scroll   pgup/pgdn to page   home/end to jump
 q to quit   esc to edit prev
