src/agent/cli/product/tui_app/src/snapshots/lha_cli__product__tui_app__pager_overlay__tests__transcript_overlay_snapshot_basic.snap
---
source: src/agent/cli/src/../product/tui_app/src/pager_overlay.rs
expression: term.backend()
---
"/ T R A N S C R I P T / / / / / / / / / "
"alpha                                   "
"                                        "
"beta                                    "
"                                        "
"gamma                                   "
"───────────────────────────────── 100% ─"
" ↑/↓ to scroll   pgup/pgdn to page   hom"
" q to quit   esc to edit prev           "
"                                        "
